# thors

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_api.sh
migrations/2026-01-29-200415-0000_create_transactions/: up.sql
migrations/2026-01-29-200443-0000_create_balance/: up.sql
migrations/2026-01-29-200505-0000_add_balance_triggers/: down.sql  up.sql
migrations/2026-01-30-120000-0000_payment_hash_by_type/: down.sql  up.sql
secrets/: db_password.txt  pgadmin_password.txt
src/: app.rs  dto.rs  errors.rs  initialize.rs  lib.rs  main.rs  models.rs  schema.rs
src/components/: balance_display.rs  functions.rs  mod.rs  qr_code.rs  receive_panel.rs  send_panel.rs  transaction_list.rs  use_websocket.rs
src/server/: api.rs  background.rs  db.rs  functions.rs  lnd.rs  mod.rs  sse.rs
style/: main.css
