[package]
name = "thors"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos full-stack
leptos = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
leptos_axum = { version = "0.8", optional = true }

# Server-side framework
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.12.5", optional = true, features = [
    "typed-header",
] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs", "cors"] }

# Database
diesel = { version = "2.3.6", features = [
    "postgres",
    "chrono",
], optional = true }
diesel-async = { version = "0.7", features = [
    "postgres",
    "deadpool",
], optional = true }
diesel_migrations = { version = "2.3", optional = true }
deadpool = { version = "0.12", optional = true }

# LND Client
tonic_lnd = { version = "0.5.1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "2"
tracing = "0.1"
bech32 = "0.9"
futures = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
dotenvy = { version = "0.15", optional = true }

# WASM/Client
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Event",
    "ClipboardEvent",
    "Navigator",
    "Clipboard",
    "Window",
] }
qrcode = "0.14"

# Reactive utilities
leptos-use = "0.18"
codee = { version = "0.3", features = ["json_serde"] }

[features]
default = ["ssr"]
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-extra",
    "dep:tower",
    "dep:tower-http",
    "dep:diesel",
    "dep:diesel-async",
    "dep:diesel_migrations",
    "dep:deadpool",
    "dep:tonic_lnd",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:futures",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "leptos/ssr",
    "leptos-use/ssr",
]
hydrate = ["dep:futures", "leptos/hydrate"]

[package.metadata.leptos]
output-name = "thors"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
site-addr = "0.0.0.0:3000"
reload-port = 3001
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
